add fordel Baitap

--- a/Baitap/[BT]Luyen tap vong lap 02.html
+++ b/Baitap/[BT]Luyen tap vong lap 02.html
@@ -6,10 +6,39 @@
 </head>
 <body>
 <script>
-   var a = parseInt(prompt("nhap gia tri"));
-   var b = 0;
-   var i = 2;
-   
+   // var n0 = 0;
+   // var n1 = 1,n2;
+   // document.write(n0 + "<br>");
+   // for (i = 2; i < 100; i++){
+   //     n2 = n0 + n1;
+   //     n0 = n1;
+   //     n1 = n2;
+   //     document.write(n2 + "<br>");
+   // }
+
+
+    var i,j;
+
+    for (i = 1; i <= 5; i++) {
+        for (j = 1; j <= i; j++) {
+            document.write("*");
+        }
+        document.write("<br>");
+    }
+    for (i = 1; i <= 5; ++i) {
+        for (j = 5; j >= i; j--) {
+            document.write("*");
+        }
+        document.write("<br>");
+    }
+
+
+
+
+
+
+
+
 
 
 
