--- a/Baitap/[BT]cau lenh switch-case.html
+++ b/Baitap/[BT]cau lenh switch-case.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <title>Cau truc dieu kien 02</title>
 </head>
+<input type="text" id = "numb">
+<button type="button" onclick="numberDay()">Tinh so ngay</button>
 <body>
 <script>
+    function numberDay() {
+        var x = parseInt(document.getElementById("numb").value);
+        switch (x) {
 
+            case 1:
+            case 3:
+            case 5:
+            case 7:
+            case 8:
+            case 10:
+            case 12:
+               alert("co 31 ngay");
+               break;
+
+            case 2:
+                alert("Thang 2 co 28 hoac 29 ngay");
+                break;
+
+            case 4:
+            case 6:
+            case 9:
+            case 11:
+                alert("co 30 ngay");
+                break;
+
+            default:
+                alert("No Choice");
+        }
+    }
 </script>
-
 </body>
 </html>
