--- a/Baitap/[TH] luyen vong lap 01.html
+++ b/Baitap/[TH] luyen vong lap 01.html
@@ -2,9 +2,121 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>thuc hanh</title>
 </head>
 <body>
-$END$
+<!--<p id = demo></p>-->
+<!--<button type="button" value="play" onclick="playing()">play</button>-->
+<script>
+    <!--dem tu 1 den 100, den 99 hien thi hop thoai thong bao-->
+    // var i;
+    // var text = "";
+    // for (i = 1;i<100; i++){
+    //     text += "" + i + "<br>";
+    //     if(i == 99){
+    //         alert("day la 99");
+    //     }
+    // }
+    // document.getElementById("demo").innerHTML = text;
+
+
+
+       // Sử dụng hàm prompt() để lấy thông tin nhiệt độ hiện tại được nhập bởi người truy cập
+       // Nếu nhiệt độ nhập vào trên 100, yêu cầu người dùng giảm nhiệt độ
+       // Nếu nhiệt độ dưới 20 và trên 0, yêu cầu người dùng tăng nhiệt độ.
+       // Chương trình chạy liên tục đến khi người dùng nhập vào giá trị của nhiệt độ dưới 0 thì kết thúc.
+       //  var x;
+       //  while ("x<0; 0<x<20; x>100"){
+       //     x = prompt("gia tri do");
+       //     if(x>100){
+       //         alert("giam nhiet do");
+       //     } else if(0<x<100){
+       //         alert("tang nhiet do");
+       //     } else if(x<0) {
+       //         alert("ket thuc");
+       //         break
+       //     }
+       // }
+
+
+             // in cac so tu 1 den 100,neu chia het cho 3 hien thi "FIZZ", chia het cho 5 hien thi "Buzz"
+              //  chia het cho ca 3 va 5 hien thi "FizzBuzz"
+           //  var i;
+           // for ( i = 3, i = 5; i < 100; i++);
+           //     if( i%3 == 0){
+           //         document.write("Fizz");
+           //     } else if( i%5 == 0){
+           //         document.write("Buzz");
+           //     } else if( i%3==0 && i%5==0){
+           //         document.write("FizzBuzz");
+           //     }
+
+
+
+
+    //Game đoán số
+    // function playing() {
+    //     var a,b,c,x,e;
+    //     a = parseInt(prompt("nhap gia tri "));
+    //     b = parseInt(prompt("nhap gia tri "));
+    //     x = Math.floor(Math.random() * (b - a) + a);
+    //     c = parseInt(prompt("nhap gia tri doan"));
+    //     if (x == c) {
+    //         alert("ban doan dung");
+    //     }   else {
+    //         for (var i = 0 ; i< 3; i++) {
+    //             var e = parseInt(prompt("nhap lai"));
+    //             if (e == x) {
+    //                 alert("ban doan dung");
+    //                 break
+    //             } else {
+    //                 alert("ban doan sai");
+    //             }
+    //         }
+    //     }
+    // }
+
+
+    //Hiển thị ra 20 số trong dãy fibonacci đầu tiên.
+    // var n0 = 0;
+    // var n1 = 1,n2;
+    // document.write(n0 + "<br>");
+    // for (i = 2; i < 20; i++){
+    //    n2 = n0 + n1;
+    //    n0 = n1;
+    //    n1 = n2;
+    //     document.write(n2 + "<br>");
+    // }
+
+
+
+
+
+
+
+
+  
+      
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</script>
+
 </body>
 </html>
