--- a/Baitap/[TH]thuc hien vong lap do-while.html
+++ b/Baitap/[TH]thuc hien vong lap do-while.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Do...While</title>
 </head>
 <body>
-$END$
+<script>
+    var value = null;
+    do{
+        value = prompt("nhap vao so tu 1 -> 10");
+    } while (value < 1 || value > 10);
+    alert("so vua nhap la" + value);
+</script>
+
 </body>
 </html>
