--- a/Baitap/[BT]May tinh don gian.html
+++ b/Baitap/[BT]May tinh don gian.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>May tinh don gian</title>
 </head>
 <body>
-$END$
+<p id="demo"></p>
+<input type="text" id = "result"><br>
+<button type="button" value="1" onclick="result.value += this.value">1</button>
+<button type="button" value="2" onclick="result.value += this.value">2</button>
+<button type="button" value="3" onclick="result.value += this.value">3</button>
+<button type="button" value="+" onclick="result.value += this.value">+</button><br>
+<button type="button" value="4" onclick="result.value += this.value">4</button>
+<button type="button" value="5" onclick="result.value += this.value">5</button>
+<button type="button" value="6" onclick="result.value += this.value">6</button>
+<button type="button" value="-" onclick="result.value += this.value">-</button><br>
+<button type="button" value="7" onclick="result.value += this.value">7</button>
+<button type="button" value="8" onclick="result.value += this.value">8</button>
+<button type="button" value="9" onclick="result.value += this.value">9</button>
+<button type="button" value="*" onclick="result.value += this.value">*</button><br>
+<button type="button" value="C" onclick="result.value = ''">C</button>
+<button type="button" value="0" onclick="result.value += this.value">0</button>
+<button type="button" value="=" onclick="result.value = eval(result.value)">=</button>
+<button type="button" value="/" onclick="result.value += this.value">/</button>
 </body>
 </html>
