--- a/Baitap/[BT]luyen tap caut truc dieu kien 02.html
+++ b/Baitap/[BT]luyen tap caut truc dieu kien 02.html
@@ -2,9 +2,100 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>cau truc dieu kien 02</title>
 </head>
+<p id="demo"></p>
+<script>
+    <!--chuyen tu 0C sang 0F-->
+     // var C,F,nhietdo;
+     // nhietdo =("doi C sang F");
+     // if ("nhietdo == C") {
+     //     C = prompt("F");
+     //     F = (9 * C + 160) / 5;
+     //     alert("do F la" + F);
+     // }
+
+
+    //chuyen tu m sang f
+    // var m,f,chance;
+    //  chance = ("doi m sang f");
+    //  if ("chance == m"){
+    //      m = prompt("f");
+    //      f = m*3.2808;
+    //      alert("f");
+    //  }
+
+
+    //tinh dien tich hinh vuong
+    // var a;
+    // a = prompt("chieu dai canh");
+    // S = 4*a;
+    // if (a){
+    //     alert("dien tich" + S);
+    // }
+
+
+
+    //tinh dien tich HCN
+    // var a,b;
+    // a = prompt("chieu dai canh a");
+    // b = prompt("chieu dai canh b");
+    // S = a*b;
+    // if (a,b){
+    //     alert("dien tich" + S);
+    // }
+
+
+    //tinh dien tich tam giac vuong
+    // var a,b;
+    // a = prompt("chieu dai a");
+    // b = prompt("chieu dai b");
+    // S = 1/2*a*b;
+    // if (a,b){
+    //     alert("dien tich" + S);
+    // }
+
+
+    //giai PT bac 1
+    // var a,b,x;
+    // a = prompt("nhap gia tri a");
+    // b = prompt("nhap gia tri b");
+    // if (a == 0){
+    //     alert("vo nghiem");
+    // } else {
+    //     alert(x = -b/a);
+    // }
+
+
+
+        //giai phuong trinh bac 2
+        // var a, b, c, x1, x2, D;
+        // a = parseFloat(prompt("nhap gia tri a"));
+        // b = parseFloat(prompt("nhap gia tri b"));
+        // c = parseFloat(prompt("nhap gia tri c"));
+        // D = b * b - 4 * a * c;
+        // if (D < 0) {
+        //     alert("PT vo nghiem");
+        // } else if (D == 0) {
+        //     alert("PT co nghiem kep");
+        //     x1 = -((b / (2 * a)));
+        //     x2 = -((b / (2 * a)));
+        //     document.getElementById("demo").innerHTML = x1;
+        //     document.getElementById("demo").innerHTML = x2;
+        // } else if(D > 0) {
+        //     alert("PT co 2 nghiem");
+        //     x1 = (-b - math.sqrt(D)) / (2 * a);
+        //     x2 = (-b + math.sqrt(D)) / (2 * a);
+        //     document.getElementById("demo").innerHTML = x1;
+        //     document.getElementById("demo").innerHTML = x2;
+        // }
+
+
+
+
+
+
+</script>
 <body>
-$END$
 </body>
 </html>
