--- a/Baitap/[TH]Luyen tap voi toan tu.html
+++ b/Baitap/[TH]Luyen tap voi toan tu.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Luyen tap voi toan tu</title>
+    <script>
+         var a = parseInt(prompt(" a"));
+         var b = parseInt(prompt(" b"));
+         result = ( a + b < 4) ? alert('Below'): alert('Over');
+        // var login = prompt("nhap");
+        // result = (login == 'employee') ? alert('Hello') : (login == 'Director') ? alert('Greeting') : (login == '' ) ? alert('no login'):'';
+</script>
 </head>
 <body>
-$END$
 </body>
 </html>
