--- a/Baitap/[TH]vong lap for-while.html
+++ b/Baitap/[TH]vong lap for-while.html
@@ -7,6 +7,7 @@
 <body>
 <p id = demo></p>
 <script>
+    <!--Viết chương trình hiển thị chuỗi “The number is N” 5 lần sử dụng vòng lặp for. Với N sẽ hiển thị từ 0 đến 5.-->
     // var i;
     // var text = "";
     // for (i = 0 ; i < 5 ; i ++){
@@ -15,6 +16,7 @@
     // document.getElementById("demo").innerHTML = text;
 
 
+     //Viết chương trình nhập vào một số bất kỳ lớn hơn 0. Tính tổng các phần tử từ 1 đến số vừa nhập vào.
      // var num = prompt("enter your number");
      // var total = 0;
      // var i = 1;
@@ -24,16 +26,19 @@
      // alert(total);
 
 
-      var num = prompt("enter a number");
-      var total = 0;
-      while ("num != -1"){
-          num = prompt(("enter a number"));
-          alert("number");
-          total = total + num;
-      }
-          alert(total);
+      //Viết chương trình nhận vào một số từ hộp thoại, việc nhập kết thúc khi người dùng nhập vào giá trị -1.
+    // Mỗi giá trị nhập được sẽ được hiển thị ra và thực hiện tính tổng các giá trị đó.
+    //   var num = prompt("enter a number");
+    //   var total = 0;
+    //   while (num != -1){
+    //       num = prompt(("enter a number"));
+    //       alert("number");
+    //       total = total + num;
+    //   }
+    //       alert(total);
 
 
+        //Viết chương hình hiển thị thẻ <hr> theo độ rộng từ 1 đến 100. Kết quả sẽ được hiển thị như hình
         // var i = 1;
         // while (i < 100){
         //     document.write("<hr width = "+ i + "%>");
