--- a/Lập trình hướng đối tượng/[TH]Xây dựng lớp Date/BT.html
+++ b/Lập trình hướng đối tượng/[TH]Xây dựng lớp Date/BT.html
@@ -16,6 +16,12 @@
         this.getYear = function () {
             return year;
         }
+        this.date = function () {
+            return day + "/" + month + "/" + year;
+        }
+        this.display = function () {
+            document.write("date: " + this.date());
+        }
         this.setDay = function (day_new) {
             day = day_new;
         }
@@ -25,22 +31,18 @@
         this.setYear = function (year_new) {
             year = year_new;
         }
-        this.display = function () {
-            document.write("day" + this.getDay() + "month" + this.getMonth() + "year" + this.getYear());
-        }
+
     }
 
     function main() {
         var date = new MyDate(2, 2, 2007);
         date.display();
-        var day1 = date.getDay();
-        day1.display();
-        var month1 = date.getMonth();
-        month1.display();
-        var year1 = date.getYear();
-        year1.display();
 
 
+
+        date.setDay(10);
+        document.write("--Sau Khi doi--");
+        date.display();
 
 
     }
