--- a/Thiết kế hướng đối tượng/[BT] Game đơn giản.html
+++ b/Thiết kế hướng đối tượng/[BT] Game đơn giản.html
@@ -8,55 +8,101 @@
 <div id="game"></div>
 <script>
 
-    function Hero(image, top, left, size,){
+    // function Hero(image, top, left, size){
+    //     this.image = image;
+    //     this.top = top;
+    //     this.left = left;
+    //     this.size = size;
+    //
+    //     this.getHeroElement = function(){
+    //         return '<img width="'+ this.size + '"' +
+    //             ' height="'+ this.size + '"' +
+    //             ' src="' + this.image +'"' +
+    //             ' style="top: '+this.top+'px; left:'+this.left+'px;position:absolute;" />';
+    //     }
+    //
+    //     this.moveRight = function(){
+    //         this.left += 100;
+    //         console.log('ok: ' + this.left);
+    //     }
+    //     this.moveDown = function () {
+    //         this.top += 100;
+    //         console.log('ok: ' + this.top);
+    //     }
+    //     this.moveLeft = function () {
+    //         this.left -= 100;
+    //         console.log('ok: ' + this.left);
+    //     }
+    //     this.moveTop = function () {
+    //         this.top -= 100;
+    //         console.log('ok: ' + this.top);
+    //     }
+    //
+    // }
+    //
+    // var hero = new Hero('giphy.gif', 20, 30, 150);
+    //
+    // function start() {
+    //     if (hero.left < window.innerWidth - hero.size && window.innerHeight - hero.size > hero.top) {
+    //         hero.moveRight();
+    //     } else if ( window.innerHeight - hero.size > hero.top && hero.left < window.innerWidth + hero.size) {
+    //         hero.moveDown();
+    //     } else if (hero.left < window.innerWidth + hero.size && window.innerHeight + hero.top > hero.top) {
+    //         hero.moveLeft();
+    //     }
+    //         document.getElementById('game').innerHTML = hero.getHeroElement();
+    //     setTimeout(start, 200)
+    // }
+    //
+    // start();
+
+    function Hero(image, top, left, size){
         this.image = image;
         this.top = top;
         this.left = left;
         this.size = size;
-
-
-
         this.getHeroElement = function(){
             return '<img width="'+ this.size + '"' +
                 ' height="'+ this.size + '"' +
                 ' src="' + this.image +'"' +
-                ' style="top: '+this.top+'px; left:'+this.left+'px;position:absolute;" />';
-        }
-
+                ' style="top: '+this.top +'px; left:'+this.left + 'px;position:absolute;" />';
+        };
         this.moveRight = function(){
-            this.left += 100;
+            this.left += 30;
+            console.log('ok: ' + this.left);
+        };
+        this.moveDown = function () {
+            this.top += 30;
+            console.log('ok: ' + this.top);
+        };
+        this.moveLeft = function () {
+            this.left -= 30;
             console.log('ok: ' + this.left);
         }
-        this.moveBottom = function(){
-            this.top += 100;
+        this.moveUp = function () {
+            this.top -= 30;
             console.log('ok: ' + this.top);
         }
-        this.moveLeft = function(){
-            this.right -= 100;
-            console.log('ok: ' + this.right);
-        }
-        this.moveTop = function(){
-            this.bottom -= 100;
-            console.log('ok: ' + this.bottom);
-        }
-
     }
-
-    var hero = new Hero('giphy.gif', 20, 30, 150);
-
-    function start(){
-        if(hero.left < window.innerWidth - hero.size){
+    var hero = new Hero('giphy.gif', 20, 30, 200);
+    function start() {
+        if (hero.left < window.innerWidth - hero.size && hero.top == 20) {
             hero.moveRight();
-        } else if(hero.top < window.innerHeight - hero.size) {
-            hero.moveBottom();
-        } else if(hero.left < window.innerWidth + hero.size) {
-            hero.moveRight();
+        } else if (hero.left > window.innerWidth - hero.size && window.innerHeight - hero.size > hero.top) {
+            hero.moveDown();
+        } else if (window.innerHeight - hero.size < hero.top) {
+            hero.moveLeft();
+        }
+        if (hero.left === 0){
+            hero.moveUp();
         }
         document.getElementById('game').innerHTML = hero.getHeroElement();
-        setTimeout(start, 200)
+        setTimeout(start, 100)
     }
-
     start();
+
+
+
 </script>
 </body>
 </html>
